# cortex

./: README.md  pyproject.toml
.claude/: settings.json
src/cortex_mcp/: __init__.py  bridge.py  cli.py  daemon.py  daemon_client.py  protocol.py  server.py  wifi_bridge.py
