[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cortex-mcp"
version = "0.2.0"
description = "MCP server and CLI for the Cortex wearable AI memory system"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "turfptax"}]
keywords = ["mcp", "ble", "wearable", "ai", "memory", "cortex"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0.0",
    "pyserial>=3.5",
    "click>=8.0",
]

[project.urls]
Homepage = "https://github.com/turfptax/cortex"
Repository = "https://github.com/turfptax/cortex"

[project.scripts]
cortex-mcp = "cortex_mcp.server:main"
cortex-cli = "cortex_mcp.cli:main"
cortex-daemon = "cortex_mcp.daemon:main"

[tool.setuptools.packages.find]
where = ["src"]
